force-app/main/default/objects/iTalentDev__SLC_Translated_CaseComment_Detail__c/iTalentDev__SLC_Translated_CaseComment_Detail__c.object-meta.xml
<CustomObject>
    <label>SLC Translated CaseComment Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLC Translated CaseComment Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>