force-app/main/default/objects/iTalentDev__SLC_Translated_CaseComment_Detail__c/fields/iTalentDev__Document_Id__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Document_Id__c</fullName>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>