force-app/main/default/objects/iTalentDev__SLC_Translated_CaseComment_Detail__c/fields/iTalentDev__LocaleCode__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__LocaleCode__c</fullName>
    <label>LocaleCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>