force-app/main/default/objects/iTalentDev__SLC_Translated_CaseComment_Detail__c/fields/iTalentDev__Translated_CaseComment__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Translated_CaseComment__c</fullName>
    <label>Translated CaseComment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>