force-app/main/default/objects/iTalentDev__SLC_Translated_CaseComment_Detail__c/listViews/iTalentDev__All.listView-meta.xml
<ListView>
    <fullName>iTalentDev__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>